@@ -6,6 +6,6 @@
     {
         "major":1,
         "minor":1,
-        "patch":b
+        "patch":c
     }
 }
